--- a/site/index.html
+++ b/site/index.html
@@ -4,13 +4,76 @@
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>module3_assignment</title>
+	<title>Module3_assignment</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	<h1>bigigl</h1>
-	<p>edwdwedwed</p>
+ <header> 
+ 	<nav id="header-nav" class="navbar navbar-default">
+ 	    <div class="container"> 
+ 		    <div class="navbar-header">
+ 			    <div class="navbar-brand">
+ 				   <h1>Food, LLC</h1>
+ 			    </div>
+ 			    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                </button>
+            </div>
+            <div id="collapsable-nav" class="collapse navbar-collapse">
+              <ul id="nav-list" class="nav navbar-nav navbar-right">
+              <li class="visible-xs"> 
+              <a href="#chick">
+                <span class="visible-xs "></span> Chicken</a> 
+                <hr class="visible-xs">
+            </li>
+            <li class="visible-xs">
+              <a href="#beef">
+                <span></span> Beef</a> 
+                <hr class="visible-xs">
+            </li>
+            <li class="visible-xs ">
+              <a href="#sushi">
+                <span></span> Sushi</a>
+            </li>
+              </ul>
+           </div>
+        </div>
+    </nav>
+ </header>
+ <div class="menu-heading container"><h1>Our menu</h1></div>
+ <div id="chick" class="items_single">
+  <section >
+    <div class="container">
+	<h3>Chicken</h3>
+	<p>A chicken is a bird. One of the features that differentiate it from most other birds is that it has a comb and two wattles. The comb is the red appendage on the top of the head, and the wattles are the two appendages under the chin. These are secondary sexual characteristics and are more prominent in the male. A few other birds have a comb or similar appendage, in some cases bearing a different name such as helmet in the guinea, and a few have wattles with some having a single median one rather than a pair. The comb is the basis of the Latin name or classification of chickens. In Latin, gallus means comb, and the domestic chicken is Gallus domesticus. The Red Jungle Fowl, ancestor of most domestic chickens, is Gallus bankiva. There are eight recognized kinds of combs: single, rose, pea, cushion, buttercup, strawberry, V-shaped, and silkie.Digital image processing deals with processing of images which are digital in nature. Study of the subject is motivated by three major applications. The first application is in improvement of pictorial information for human perception i.e. enhancing the quality of the image so that the image will have a better look. The second is for autonomous machine applications which have wider applications in industries, particularly for quality control in assembly automation and many similar applications. This course will introduce various image processing techniques, algorithms and their applications.Digital image processing deals with processing of images which are digital in nature. Study of the subject is motivated by three major applications. The first application is in improvement of pictorial information for human perception i.e. enhancing the quality of the image so that the image will have a better look. The second is for autonomous machine applications which have wider applications in industries, particularly for quality control in assembly automation and many similar applications. This course will introduce various image processing techniques, algorithms and their applications.</p>
+    </div>
+  </section>
+ </div>
+ <div id="beef" class="items_single">
+ <section>
+    <div class="container">
+	<h3>Beef</h3>
+	<p>Beef is the third most widely consumed meat in the world, accounting for about 25% of meat production worldwide, after pork and poultry at 38% and 30% respectively.In absolute numbers, the United States, Brazil, and the People's Republic of China are the world's three largest consumers of beef; Uruguay, however, has the highest beef and veal consumption per capita, followed by Argentina and Brazil. According to the data from OECD, the average Uruguayan ate over 42 kg (93 lb) of beef or veal in 2014, representing the highest beef/veal consumption per capita in the world. In comparison, the average American consumed only about 24 kg (53 lb) beef or veal in the same year, while African countries, such as Mozambique, Ghana, and Nigeria, consumed the least beef or veal per capita.Digital image processing deals with processing of images which are digital in nature. Study of the subject is motivated by three major applications. The first application is in improvement of pictorial information for human perception i.e. enhancing the quality of the image so that the image will have a better look. The second is for autonomous machine applications which have wider applications in industries, particularly for quality control in assembly automation and many similar applications. This course will introduce various image processing techniques, algorithms and their applications.Digital image processing deals with processing of images which are digital in nature. Study of the subject is motivated by three major applications. The first application is in improvement of pictorial information for human perception i.e. enhancing the quality of the image so that the image will have a better look. The second is for autonomous machine applications which have wider applications in industries, particularly for quality control in assembly automation and many similar applications. This course will introduce various image processing techniques, algorithms and their applications.</p>
+ </div>
+ </section>
+ </div>
+ <div id="sushi" class="items_single">
+ <section>
+    <div class="container">
+	<h3>Sushi</h3>
+	<p>TThere are many different kinds of sushi. The most common sushi in Japan is nigirizushi: fish that is placed on top of a small portion of sushi rice. Sometimes you may find other ingredients on top of rice, such as egg instead of fish. Makizushi consists of rice rolled around fish and/or vegetables. In America, makizushi is more popular than nigirizushi. Another type is known as temaki or a hand roll. This kind of sushi comes in a cone-shape, created by the nori wrapped around the ingredients inside. They are usually filled with a mixture of rice, fish, and vegetables.Digital image processing deals with processing of images which are digital in nature. Study of the subject is motivated by three major applications. The first application is in improvement of pictorial information for human perception i.e. enhancing the quality of the image so that the image will have a better look. The second is for autonomous machine applications which have wider applications in industries, particularly for quality control in assembly automation and many similar applications. This course will introduce various image processing techniques, algorithms and their applications.Digital image processing deals with processing of images which are digital in nature. Study of the subject is motivated by three major applications. The first application is in improvement of pictorial information for human perception i.e. enhancing the quality of the image so that the image will have a better look. The second is for autonomous machine applications which have wider applications in industries, particularly for quality control in assembly automation and many similar applications. This course will introduce various image processing techniques, algorithms and their applications.</p>
+ </div>
+ </section>
+ </body> 
 
+  <script src="js/jquery-2.1.4.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
